@@ -9,7 +9,6 @@ DEVELOPMENT.txt
 helper/constants.txt
 helper/DER_type_names.txt
 helper/generate_Constant.pl
-helper/generate_constant_class.pl
 helper/generate_DER.pl
 lib/SPVM/Net/SSLeay.c
 lib/SPVM/Net/SSLeay.config
@@ -194,6 +193,10 @@ lib/SPVM/Net/SSLeay/X509_NAME.c
 lib/SPVM/Net/SSLeay/X509_NAME.config
 lib/SPVM/Net/SSLeay/X509_NAME.pm
 lib/SPVM/Net/SSLeay/X509_NAME.spvm
+lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.c
+lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.config
+lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.pm
+lib/SPVM/Net/SSLeay/X509_NAME_ENTRY.spvm
 lib/SPVM/Net/SSLeay/X509_STORE.c
 lib/SPVM/Net/SSLeay/X509_STORE.config
 lib/SPVM/Net/SSLeay/X509_STORE.pm
